--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,14 @@ code {
 
 .card {
   text-align: center;
+  color: rgb(133, 38, 38);
   border: grey solid 1px;
   padding: 1rem;
-  width: 15rem;
+  width: auto;
   height: 25rem;
   display: inline-grid;
   margin: 1rem 2rem;
-  box-shadow: 3px 4px #e04b52;
+  box-shadow: 3px 4px #6e262a;
 }
 
 .monster-card {
