Makes simple changes to css to give app more unified aesthetic.

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,12 +3,13 @@
     box-sizing: border-box;
     width: 70px;
     padding: 5px;
-    margin: 0 6px 6px;
+    margin: 6px 6px 6px;
     background: rgb(170, 60, 60);
     text-decoration: none;
     text-align: center;
     font-size: min(10vw, 15px) ;
     color: rgb(255, 255, 255);
+    border-radius: 10px;
 }
   
 a.active {
